# docker-registry-cleaner

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-skopeo  README.md  config-example.yaml  config.yaml  configmap.yaml  docker-compose.yml  docker_delete.sh  environments-example  extract-metadata.py  get_layers.sh  image-data-analysis.py  images_report.txt  inspect-workload.py  main.py  mongo.js  pod.yaml  pyproject.toml  pytest.ini  rbac.yaml  requirements-dev.txt  requirements.txt  statefulset.yaml  workload-report.json  workload-report.txt
.github/workflows/: ci.yml
charts/docker-registry-cleaner/: Chart.yaml  README.md  values.yaml
charts/docker-registry-cleaner/templates/: _helpers.tpl  backend-api-secret.yaml  configmap.yaml  frontend-ingress.yaml  frontend-networkpolicy.yaml  frontend-service.yaml  metrics-networkpolicy.yaml  rbac.yaml  statefulset.yaml
docs/: acr-authentication.md  archive_unused_environments.md  backup-restore.md  configuration.md  delete_all_unused_environments.md  delete_archived_tags.md  delete_image.md  delete_old_revisions.md  delete_unused_environments.md  delete_unused_private_environments.md  delete_unused_references.md  find_environment_usage.md  integrity_check.md  mongo_cleanup.md  objectid-filtering.md  prometheus-metrics.md  reports.md  safety-and-troubleshooting.md  web-ui.md
frontend/: ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  app.py
frontend/templates/: base.html  error.html  index.html  operations.html  report.html
frontend/templates/static/css/: style.css
frontend/templates/static/js/: main.js
glpg-ecr-housekeep/: delete_image.js  mongo.js  mongo_run_script.sh  output.txt
go/: README.md  go.mod  images-sample-output.json  layers-sample-output.json  main.go  parser.go  sample-output.txt
metadata_extraction/: README.md  domino-data-importer-rbac.yaml  extract-metadata.py  mongo.js  workspace_env_usage.js
mongo_queries/: extract_metadata.py  model_env_usage.js  mongo_deletion.py  to_delete.txt  workspace_env_usage.js
python/: README.md  __init__.py  api.py  archive_unused_environments.py  backup_restore.py  config_manager.py  delete-image.py  delete_archived_env_tags.py  delete_archived_model_tags.py  delete_archived_tags.py  delete_image.py  delete_unused_environments.py  delete_unused_private_env_tags.py  delete_unused_private_environments.py  delete_unused_references.py  extract_metadata.py  filtered-layers.json  final-report.json  find_archived_env_tags.py  find_environment_usage.py  image-data-analysis.py  image_data_analysis.py  image_usage.py  images-report.json  images-report.txt  inspect-workload.py  inspect_workload.py  logging_utils.py  main.py  mongo_cleanup.py  mongo_utils.py  object_id_utils.py  report_utils.py  reports.py  requirements.txt  retry_utils.py  security_scanning.py  tag-sums.json  tags-per-layer.json  usage_tracker.py  (+1 more)
python/scripts/: __init__.py  archive_unused_environments.py  backup_restore.py  delete_archived_tags.py  delete_image.py  delete_old_revisions.py  delete_unused_environments.py  delete_unused_private_environments.py  delete_unused_references.py  find_environment_usage.py  image_size_report.py  integrity_check.py  migrate_registry.py  mongo_cleanup.py  reports.py  reset_default_environments.py  reset_user_preferences.py  run_registry_gc.py  skopeo_sidecar_server.py  user_size_report.py
python/utils/: __init__.py  cache_utils.py  checkpoint.py  config_manager.py  deletion_base.py  error_utils.py  extract_metadata.py  health_checks.py  image_data_analysis.py  image_metadata.py  image_usage.py  logging_utils.py  mongo_utils.py  object_id_utils.py  registry_maintenance.py  report_utils.py  retry_utils.py  security_scanning.py  skopeo_client.py  tag_matching.py
python/utils/auth/: __init__.py  providers.py
reports/: archived-model-tags.json  archived-tags.json  deactivated-user-envs.json  deletion-analysis.json  disabled-user-envs.json  filtered-layers.json  final-report.json  image-size-report.json  images-report.json  images-report.txt  layers-and-sizes.json  mongodb_usage_report.json  tag-sums.json  tags-per-layer.json  unused-environments.json  user-size-report.json  workload-report.json  workload-report.txt  workspace_env_usage_output.json
results/: 1mongo_output.json  model_env_usage_output.json
tests/: README.md  __init__.py  conftest.py  test_age_filtering.py  test_auth_providers.py  test_config_manager.py  test_deletion_scripts.py  test_deletion_workflows.py  test_frontend.py  test_health_checks.py  test_integration_deletion_logic.py  test_integration_shared_layers.py  test_kubernetes_integration.py  test_migrate_registry.py  test_object_id_utils.py  test_report_utils.py  test_skopeo_client.py  test_usage_detection.py
