[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-registry-cleaner"
version = "0.3.2"
description = "Tools for analyzing and cleaning Docker registries"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Domino Data Lab"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "azure-identity>=1.15.0,<2.0.0",
    "boto3>=1.34.0,<2.0.0",
    "kubernetes>=29.0.0,<32.0.0",
    "pymongo>=4.6.0,<5.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "python-keycloak>=3.0.0,<5.0.0",
]

[project.scripts]
docker-registry-cleaner = "python.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=24.0.0,<26.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.0.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "boto3-stubs>=1.34.0",
    "types-azure-identity>=1.15.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["utils", "scripts"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Don't warn about functions returning Any
warn_unused_ignores = false  # Don't warn about unused type ignores
disallow_untyped_defs = false  # Allow functions without type hints
check_untyped_defs = false  # Don't check bodies of untyped functions
ignore_missing_imports = true  # Ignore missing stubs for third-party libraries
no_implicit_optional = false  # Allow None as default without Optional[]
# Disable specific error codes for CI compatibility
disable_error_code = [
    "assignment",
    "arg-type",
    "return-value",
    "dict-item",
    "var-annotated",
    "operator",
    "attr-defined",
    "misc",
    "index",
    "no-redef",
    "call-overload",
]
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "bson.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "keycloak.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

# Note: pytest config is in pytest.ini

[tool.coverage.run]
source = ["python"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
